corrected overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -64,10 +64,16 @@ div.app-border {
   background-repeat: no-repeat;
 
 }  */
+div.App {
+  width: 100% auto;
+  height: 100% auto;
+}
 
 div.app-container {
   width: 100%;
   height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 div.dark-box {
