--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -10,6 +10,5 @@ h1.veggie-header {
 
 h4.veggie-menu {
   margin: 0;
-  text-align: right;
-  padding-right: 5px;
+  font-size: small;
 }
